--- a/kafka/kafka-producer-wikimedia/build.gradle
+++ b/kafka/kafka-producer-wikimedia/build.gradle
@@ -25,13 +25,8 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
 	implementation 'org.slf4j:slf4j-simple'
 
-	// https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
-	implementation 'com.squareup.okhttp3:okhttp'
-
-	// https://mvnrepository.com/artifact/com.launchdarkly/okhttp-eventsource
-	implementation 'com.launchdarkly:okhttp-eventsource'
-
-
+	// WebClient
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 }
 
 tasks.named('test') {
